# qrcode_mcp

./: .gitignore  Dockerfile  README-zh.md  README.md  example.py  pyproject.toml  qrcode_mcp_server.py  qrcode_utils.py  test_mcp_client.py
