[project]
name = "qrcode-mcp"
version = "0.1.0"
description = "A MCP tool to convert text to QR code images with base64 encoding"
dependencies = [
    "qrcode>=7.4.2",
    "Pillow>=10.0.0",
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
]
requires-python = ">=3.8"

[project.scripts]
qrcode-mcp-stdio = "qrcode_mcp_server:main_stdio"
qrcode-mcp-http = "qrcode_mcp_server:main_http_with_args"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qrcode_utils.py", "qrcode_mcp_server.py"] 